# heidi-x509

./: Cargo.toml  README.md  test_cert.pem
heidi-x509/: Cargo.toml
heidi-x509-cli/: Cargo.toml
heidi-x509-cli/src/: main.rs
heidi-x509/src/: x509.rs
heidi-x509/test-chains/: google.ch  schweizmobil.ch
src/: crypto.rs  lib.rs  x509.rs
test-chains/: google.ch
